# capybara

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  get_sign.bc
3rd/: CMakeLists.txt
core/: ArrayExprHash.h  CMakeLists.txt  ConstantWrapper.cpp  ConstantWrapper.h  Core.ixx  FunctionWrapper.cpp  FunctionWrapper.h  GlobalSetting.cpp  GlobalSetting.h  ImmutableMap.h  InlineAsm.h  InstructionWrapper.h  Logger.cpp  Logger.h  Logger.ixx  MemoryBlock.cpp  MemoryBlock.h  MemoryManager.cpp  MemoryManager.h  ModuleWrapper.cpp  ModuleWrapper.cppm  ModuleWrapper.h  ModuleWrapper.ixx  RefCounter.cpp  RefCounter.h  Simulator.cpp  Simulator.h  Simulator.ixx  StackFrame.cpp  StackFrame.h  Timer.cpp  Timer.h  Timer.ixx  UpdateNode.cpp  UpdateNode.h
core/expr/: ConcatExpr.cpp  ConcatExpr.h  ConcatExpr.ixx  ConstantExpr.cpp  ConstantExpr.h  ConstantExpr.ixx  Expr.cpp  Expr.h  Expr.ixx  ExtractExpr.cpp  ExtractExpr.h  ExtractExpr.ixx  NotOptimizedExpr.cpp  NotOptimizedExpr.h  NotOptimizedExpr.ixx  ReadExpr.cpp  ReadExpr.h  ReadExpr.ixx  SelectExpr.cpp  SelectExpr.h  SelectExpr.ixx
core/expr/Arithmetic/: AddExpr.cpp  AddExpr.h  AddExpr.ixx  MulExpr.cpp  MulExpr.h  MulExpr.ixx  SDivExpr.cpp  SDivExpr.h  SDivExpr.ixx  SRemExpr.cpp  SRemExpr.h  SRemExpr.ixx  SubExpr.cpp  SubExpr.h  SubExpr.ixx  UDivExpr.cpp  UDivExpr.h  UDivExpr.ixx  URemExpr.cpp  URemExpr.h  URemExpr.ixx
core/expr/Bit/: AShrExpr.cpp  AShrExpr.h  AShrExpr.ixx  AndExpr.cpp  AndExpr.h  AndExpr.ixx  LShrExpr.cpp  LShrExpr.h  LShrExpr.ixx  NotExpr.cpp  NotExpr.h  NotExpr.ixx  OrExpr.cpp  OrExpr.h  OrExpr.ixx  ShlExpr.cpp  ShlExpr.h  ShlExpr.ixx  XorExpr.cpp  XorExpr.h  XorExpr.ixx
core/expr/Cast/: SExtExpr.cpp  SExtExpr.h  SExtExpr.ixx  ZExtExpr.cpp  ZExtExpr.h  ZExtExpr.ixx
core/expr/Compare/: EqExpr.cpp  EqExpr.h  EqExpr.ixx  NeExpr.cpp  NeExpr.h  NeExpr.ixx  SgeExpr.cpp  SgeExpr.h  SgeExpr.ixx  SgtExpr.cpp  SgtExpr.h  SgtExpr.ixx  SleExpr.cpp  SleExpr.h  SleExpr.ixx  SltExpr.cpp  SltExpr.h  SltExpr.ixx  UgeExpr.cpp  UgeExpr.h  UgeExpr.ixx  UgtExpr.cpp  UgtExpr.h  UgtExpr.ixx  UleExpr.cpp  UleExpr.h  UleExpr.ixx  UltExpr.cpp  UltExpr.h  UltExpr.ixx
core/memory/: MemoryBlock.cpp  MemoryBlock.h  MemoryManager.cpp  MemoryManager.h  MemoryManager.ixx  MemoryObject.cpp  MemoryObject.h  MemoryObject.ixx
core/pass/: DivCheckPass.cpp  DivCheckPass.h  DivCheckPass.ixx  OvershiftCheckPass.cpp  OvershiftCheckPass.h  OvershiftCheckPass.ixx
core/runtime/: AddressSpace.cpp  AddressSpace.h  ArrayObject.cpp  ArrayObject.h  ConstantWrapper.cpp  ConstantWrapper.h  ConstantWrapper.ixx  ExecutionState.cpp  ExecutionState.h  ExecutionState.ixx  ExprOptimizer.cpp  ExprOptimizer.h  ExternalDispatcher.cpp  ExternalDispatcher.h  FunctionWrapper.cpp  FunctionWrapper.h  FunctionWrapper.ixx  InlineAsm.ixx  InlineAsmWrapper.cpp  InlineAsmWrapper.h  InstructionWrapper.cpp  InstructionWrapper.h  InstructionWrapper.ixx  ModuleWrapper.cpp  ModuleWrapper.h  ModuleWrapper.ixx  ObjectState.cpp  ObjectState.h  StackFrame.cpp  StackFrame.h  StackFrame.ixx  TerminationType.h
core/statistic/: StatisticManager.cpp  StatisticManager.h  Statistics.cpp  Statistics.h
main/: Application.cpp  Application.h  Application.ixx  CMakeLists.txt  MainLoop.cpp  MainLoop.h  main.cpp
modules/: CMakeLists.txt
modules/Expr/: CMakeLists.txt
modules/FileManager/: CMakeLists.txt  FileLoader.cpp  FileLoader.h  FileLoader.ixx  FileManager.cpp  FileManager.h
modules/Memory/: CMakeLists.txt
modules/Runtime/: CMakeLists.txt  Register.cpp  Register.h
modules/Searcher/: CMakeLists.txt
modules/Solver/: CMakeLists.txt  CacheSolver.h  Solver.cpp  Solver.h  SolverManager.cpp  SolverManager.h  Z3Builder.cpp  Z3Builder.h  Z3Solver.cpp  Z3Solver.h
platform/windows/: CMakeLists.txt  SystemWindows.cpp  SystemWindows.h  main.cpp
test/: CMakeLists.txt  TestRefCounter.cpp
